--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@400;500;700&family=Lato:wght@300;400;700;900&family=Open+Sans:wght@800&family=Work+Sans:wght@200;300;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+
+body{
+  font-family: 'Ex0 2', sans-serif;
+}
